quick-install/kubernetes/ovc-webrdp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovc-webrdp-ingress
  namespace: ovc-infra
spec:
  ingressClassName: traefik
  rules:
    - host: webrdp.openvcenter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ovc-webrdp-service
                port: { name: http }
